# monitor-judicializacao

./: .env.example  .gitignore  README.md  publicar.sh  pyproject.toml
.github/workflows/: atualizar.yml
cache/: conasems_onco.json
config/: municipios.yaml  tribunais.yaml
docs/: index.html
scripts/: demo.py
src/: cli.py  pipeline.py
src/alert/: dispatcher.py
src/classify/: tema1234.py
src/config/: constants.py  geo.py  logging_setup.py  settings.py
src/config/data/: municipios_ibge.json
src/enrich/: conasems_onco.py  connectors.py
src/ingest/: client.py  mapper.py  query.py
src/privacy/: sanitize.py
src/report/: aggregate.py  dashboard.py  pdf.py  xlsx.py
src/store/: db.py  models.py  repository.py
tests/: fixtures.py  test_classify.py  test_geo.py  test_pipeline.py  test_query_mapper.py  test_sanitize.py
