[project]
name = "monitor-judicializacao"
version = "0.1.0"
description = "Monitoramento de judicializacao de medicamentos de alto custo com enquadramento no Tema 1.234/STF"
requires-python = ">=3.9"
# Runtime recomendado: Python 3.11+. Codigo mantido compativel com 3.9 para
# facilitar dev/teste em ambientes sem 3.11 instalado.
dependencies = [
    "httpx>=0.27",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
    "sqlmodel>=0.0.16",
    "PyYAML>=6.0",
    "APScheduler>=3.10",
    "openpyxl>=3.1",
    "reportlab>=4.1",
    "python-dotenv>=1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "respx>=0.21",
]

[project.scripts]
monitor = "src.cli:main"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.setuptools]
packages = ["src"]
